--- a/guiaclientes/package.json
+++ b/guiaclientes/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^1.0.0",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "vue": "^3.2.13"
